Tue Mar 23 15:21:12 2004  George Lebl <jirka@5z.com>

	* src/lexer.l, src/parse.y, src/eval.[ch], src/calc.c:  Add
	  := (E_DEFEQUALS) operator which is never translated to ==.
	  Also use E_DEFEQUALS on function definitions always so that
	  they don't get translated (that would just be plain
	  confusing).

	* src/geniustests.txt: add tests for :=

	* doc/manual.txt: update for the := operator

Tue Mar 23 14:35:09 2004  George Lebl <jirka@5z.com>

	* src/Makefile.am, src/gnome-genius.[ch], src/calc.c, src/eval.c:
	  Cleanup, print version in title, make titles more sane + 
	  some string changes, a bit of renaming, add gnome-genius.h header
	  to export the current setup and update some copyright notices

	* src/graphing.c: fixup wrt the header, add status icons next to
	  the entries, make enter do the plot, add "Fit Y axis" function
	  to the plot window, errors that occur when we invoke the engine
	  from the graph window now always go to dialogs, And fix graphing
	  the identity (that is, just "x")

Tue Mar 23 11:14:02 2004  George Lebl <jirka@5z.com>

	* src/gnome-genius.c, src/graphing.[ch]:  Add a plot dialog where it
	  is easier to enter functions to plot and specify range and add
	  menu items and toolbar item for this.

	* src/graphing.c: Handle errors better when calling a function
	  instead of just treating them as 0.  Also fixup errors from the
	  LinePlot function to not affect the replot data until we
	  are successful in collecting new data.

	* src/dict.[ch]: minor cleanup

Mon Mar 22 13:23:46 2004  George Lebl <jirka@5z.com>

	* src/graphing.c: add scale to graphs, allow zooming in and zooming
	  out, fix a bunch of issue wrt interruptions, window closing and
	  range specification.

Fri Mar 19 17:42:38 2004  George Lebl <jirka@5z.com>

	* src/gnome-genius.c: properly interrupt on Ctrl-C and also whack
	  the readbuf* which weren't used anymore

Fri Mar 19 16:52:18 2004  George Lebl <jirka@5z.com>
