@@ -12,8 +12,10 @@ Requirements:
 	- lex (tested under flex)
 	- yacc (tested under bison -y)
 	- gmp (relatively new one required, tested with 4.1)
-	- glib
-	- gtk+
+	  - mpfr (optional but highly recommended)
+                 (part of gmp, but must be enabled)
+	- glib 2.x
+	- gtk+ 2.x (at least 2.4 is recommended)
 	- gnome libs
 All except gmp seem to be pretty much standard or Linux systems, and even
 on most other platforms.
