@@ -15,8 +15,6 @@
 *	Check modular arithmetic to be correct (such as: "expr mod n"),
         that is, when do we mod is the question.
 
-*	Add discrete log
-
 *	Add extended gcd
 
 *	Perhaps latex and troff mode should not be used on error output,
@@ -30,8 +28,7 @@
 *	Native boolean
 
 *	When giving errors give file name line number somehow
-
-*	File editting
+	- done?
 
 *	Add user argument checking functions for parameters
 
@@ -39,8 +36,6 @@
 
 *	matrix powers for rational numbers, and scalar^matrix (as matlab
 	does it)
-
-*	add gui display to genius and use when genius run in X
 
 *	extern and global variables (parameters may be enough)
 
@@ -53,8 +48,6 @@
 	numbers ...
 
 *	cleanup engine
-
-*	mdi like interface, and gel file editting inside genius
 
 *	make one line expression output more sane and make it work right
 	for matricies
