@@ -747,8 +747,8 @@ version lib.cgel) in the installed directory, then it looks into the
 current directory, and then it tries to load an uncompiled file called
 ~/.geniusinit
 
-If you ever change the lib.gel in it's installed place, you'll have to
-first compile it with "genius --compile lib.gel > lib.cgel"
+If you ever change the the library its installed place, you'll have to
+first compile it with "genius --compile loader.gel > lib.cgel"
 
 
 EXAMPLE PROGRAMS in GEL:
