@@ -5,9 +5,8 @@ GELFILES = delta.gel elementary.gel numerical.gel orthogonal_polynomials.gel
 
 EXTRA_DIST = $(GELFILES)
 
-Library_DATA = $(GELFILES)
+Library_DATA = $(GELFILES) loader.gel
 
-bin_SCRIPTS = loader.gel
 MOSTLYCLEANFILES = loader.gel
 
 loader.gel: $(GELFILES)
