@@ -6,9 +6,8 @@ GELFILES = bilinear_forms.gel linear_algebra.gel \
 
 EXTRA_DIST = $(GELFILES)
 
-Library_DATA = $(GELFILES)
+Library_DATA = $(GELFILES) loader.gel
 
-bin_SCRIPTS = loader.gel
 MOSTLYCLEANFILES = loader.gel
 
 loader.gel: $(GELFILES)
