@@ -12,7 +12,7 @@ Changes to 0.5.8
 * Add rotation matrices (2D and 3D euclidean space)
 * Fix interruption with ^C
 * Lots of other minor fixes
-* Documentation update
+* Documentation updates
 * Translation updates (FIXME)
 
 Changes to 0.5.7.1
