@@ -1,3 +1,10 @@
+Wed Mar 24 11:04:26 2004  George Lebl <jirka@5z.com>
+
+	* doc/manual.txt, lib/linear_algebra/*.gel: fixup some documentation
+
+	* lib/**/Makefile.am: fix installation of loader.gel into the
+	  correct directory (not into /bin/ whoops :)
+
 Tue Mar 23 15:21:12 2004  George Lebl <jirka@5z.com>
 
 	* src/lexer.l, src/parse.y, src/eval.[ch], src/calc.c:  Add
